A few little updates

--- a/wp-content/themes/wpinabox-theme/style.css
+++ b/wp-content/themes/wpinabox-theme/style.css
@@ -1,7 +1,7 @@
 /******************************************************************
-Theme Name: Assembled Brands
-Author: Common Name
-Author URI: http://common-name.com
+Theme Name: wpinabox
+Author: Andy Dayton
+Author URI: http://andydayton.com
 */
 
 .sticky {}          /* DO NOT EDIT THIS */
