Update naming and readme

--- a/wp-content/themes/wpinabox-theme/style.css
+++ b/wp-content/themes/wpinabox-theme/style.css
@@ -1,5 +1,5 @@
 /******************************************************************
-Theme Name: wpinabox Theme
+Theme Name: WPinabox Theme
 Author: Andy Dayton
 Author URI: http://andydayton.com
 */
